# simple_http

./: CMakeLists.txt  application.cpp  application.h  conf  main.cpp
api/: api.cpp  api.h  hls_context.h
docker/production-environment/: Dockerfile
hls/: chunk.h
hls_archive_storage/: chunk_info_serializer.cpp  chunk_info_serializer.h  hls_arhive_playlist_generator.cpp  hls_arhive_playlist_generator.h  hls_arhive_storage.cpp  hls_arhive_storage.h  hls_chunk_info.h  hls_chunk_info_repository.cpp  hls_chunk_info_repository.h
hls_live_storage/: hls_live_storage.cpp  hls_live_storage.h  hls_live_storage_error.cpp  hls_live_storage_error.h
http/: request.cpp  request.h  server.cpp  server.h  string.cpp  string.h  uri.cpp  uri.h  worker.cpp  worker.h
settings/: archive_hls_settings.h  http_server_settings.h  live_hls_settings.h  settings.cpp  settings.h
src/: .gitignore  main.cpp
src/http/: client.cpp  client.h  client_worker.cpp  client_worker.h  connection.h  handlers.h  request.h  request_reader.cpp  request_reader.h  request_state_machine.cpp  response.h  response_reader.cpp  response_reader.h  response_state_machine.cpp  server.cpp  server.h  server_worker.cpp  server_worker.h  str.h  uri.cpp  worker.cpp  worker.h
utility/: filesystem.cpp  filesystem.h
